--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
 
     
     
-    <p>z-zip   <a target="_blank" href="https://www.7-zip.org/a/7z2201-x64.exe">download</a></p>
-    <p>BitTorrent   <a target="_blank" href="https://www.bittorrent.com/downloads/complete/">download</a></p>
-    <p>steam   <a target="_blank" href="https://store.steampowered.com/about/">download</a></p>
-    <h2>download forza horizon 5 online</h2>
+    <p>z-zip   <a target="_blank" href="https://www.7-zip.org/a/7z2201-x64.exe">تحميل</a></p>
+    <p>BitTorrent   <a target="_blank" href="https://www.bittorrent.com/downloads/complete/">تحميل</a></p>
+    <p>steam   <a target="_blank" href="https://store.steampowered.com/about/">تحميل</a></p>
+    <h2>تحميل forza horizon 5 online</h2>
     <a href="https://www.file-upload.com/e9r7qes62wp3" target=_blank>Forza.Horizon.5.torrent</a>
     <br>
     <br>
@@ -239,7 +239,7 @@
                 سرعة التنزيل
               </label>
               <input id="internetSpeed_p" type="button" value="+" onclick="internetSpeed.value = (parseInt(internetSpeed.value)+1).toFixed(2)">
-              <input id="internetSpeed" type="number" min="0" step="0.01" value="" placeholder="Download speed"  >
+              <input id="internetSpeed" type="number" min="0" step="0.01" value="" placeholder="تحميل speed"  >
               <input id="internetSpeed_p" type="button" value="-" onclick="internetSpeed.value = (parseInt(internetSpeed.value)-1).toFixed(2)">
               <select id="internetSpeedBase" aria-label="Unit of speed like Kbps, Mbps, Gbps">
                 <option value="10^3">
